Grant SD2 revisions
* Changed tense
* Added team section
* Added stub Manual section
* Added board shots
* removed out dated info
* Updated software flow diagrams to remove battery references
* Removed section heading sin/cos flair

--- a/appendix.tex
+++ b/appendix.tex
@@ -10,15 +10,12 @@
 \emph{During the creation of this document, we avoided using any copyrighted works.}
 
 % BEGIN BIBLIOGRAPHY
-%\newpage
-%\clearpage
 \thispagestyle{empty}
 \pagestyle{empty}
 
 \section{Appendix - References}
 
 % Actual References
-\todo[inline]{Must have an ``old style'' reference section}
 \renewcommand{\refname}{\centerline{\Large\bf References Cited}}
 \bibliographystyle{simple}
 
@@ -51,3 +48,35 @@
 \bibitem{link25} ILI9341 Fruit \url{https://github.com/adafruit/Adafruit_ILI9341}
 \bibitem{link26} Bresenham Line Algo \url{https://en.wikipedia.org/wiki/Bresenham\%27s_line_algorithm}
 \end{thebibliography}
+
+\section{Appendix - WHCS Team}
+\makebox[\textwidth][c]{
+\includegraphics[width=0.3\linewidth]{Grant}
+}
+
+\textbf{Grant Hernandez} is a senior at the University of Central Florida. He will be
+graduating with a Bachelor of Science in Computer Engineering this summer. In
+his spare time, Grant writes lots of code, reverse engineers binaries, plays in cyber
+Capture the Flag competitions, dabbles in computer graphics, and tinkers with
+embedded systems. He will be attending the University of Florida in fall 2015
+to begin his Ph.D in Computer Engineering with a security research lab.
+
+\makebox[\textwidth][c]{
+\includegraphics[width=0.3\linewidth]{Jimmy}
+}
+
+\textbf{Jimmy Campbell} is a senior at the University of Central Florida. He will be
+receiving a Bachelor of Science in Computer Engineering in August 2015. His
+interests include embedded programming, mobile development, and web back-end
+development. Jimmy will be taking a full time position with Microsoft as a
+Software Development Engineer after graduating.
+
+\makebox[\textwidth][c]{
+\includegraphics[width=0.3\linewidth]{Joseph}
+}
+
+\textbf{Joseph Love} is currently a senior at the University of Central Florida and will
+receive his Bachelor of Science in Electrical Engineering in August of 2015. He
+is currently working with Direct Beam Incorporated and plans to pursue his
+masters in Electrical Engineering during the Fall of 2015 at UCF with a focus
+in Electromagnetics.
