--- a/demo.tex
+++ b/demo.tex
@@ -31,13 +31,13 @@ the power of the voice control in the Android application.
 
 \subsection{LCD Light Activation}
 In order to demonstrate how the base station LCD works separately from the
-Android phone, we will show that all of the WHCS functions can be controlled
-from the touch panel. The simplest test would be to press a button on the LCD
-and have a controlled light toggle off and on. This would demonstrate that WHCS
+Android phone, we show that all of the WHCS functions can be controlled
+from the touch panel. The simplest test is to press a button on the LCD
+and have a controlled light toggle off and on. This demonstrates that WHCS
 is functional on many levels: the LCD works and can receive input, the base
 station can send packets to a specific control module, and that specific
 control module can correctly execute a received command.  Members present
-during the demo would be able to see for themselves how the LCD operates. They
+during the demo were able to see for themselves how the LCD operates. They
 could explore the menus and try to control some modules themselves.
 
 \subsection{Sensor Query}
@@ -70,6 +70,9 @@ listening control modules and connected phones. That way the user could be
 remotely notified in the event of a power outage. Of course due to the limited
 range of the BlueTooth connection the owner would most likely know when the
 power goes out as they are probably in the home.
+
+Due to design changes, this demo was never done, nor implemented. It required
+a backup battery infrastructure, which was removed from the design.
 
 \subsection{Remote Door Access}
 \label{sec:demo-door}
