--- a/manage.tex
+++ b/manage.tex
@@ -13,10 +13,10 @@ planned a comprehensive budget. This budget contained names, quantities, and
 estimated costs of all the major parts of our project. This itemized breakdown
 of WHCS allowed us to budget our funds amongst the group members and also to
 apply for external funding. Through the use of our detailed budget, we were
-able to land a funding offer of \$434.42 from Boeing. This doesn't cover all
-costs of the WHCS project, but takes a lot of financial burden off of the group
-members. Beyond this funding offer, the group members have stated that they are
-willing to provide up to \$300 each.
+able to land a funding offer of \$434.42 from Boeing. This covered
+all WHCS expenses except for a few items bought by the members themselves.
+Beyond this funding offer, the group members stated that they
+were to provide up to \$300 each.
 
 The costs listed in \autoref{tab:budget} are derived from costs researched
 online. These are the best estimate at the time of creation for each item. Some
@@ -26,7 +26,7 @@ price. This is important to note for auditors and for our future purchasing.
 
 \begin{table}[H]
 \makebox[\textwidth][c]{
-\begin{tabular}{|l|l|l|l|b{4cm}|}
+  \begin{tabular}{|b{4.5cm}|l|l|l|b{4cm}|}
 \hline
 {\color{black} \textbf{Item}} &
 {\color{black} \textbf{Cost}} &
@@ -137,7 +137,7 @@ price. This is important to note for auditors and for our future purchasing.
 {\color{black} N/A} &
 {\color{black} N/A} &
 {\color{black} \$50.00} &
-{\color{black} Wire,Resistors,Capacitors, Inductors,LED{}'s prototyping equipment, etc}\\\hline
+{\color{black} Wire, Resistors, Capacitors, Inductors, LED{}'s prototyping equipment, etc}\\\hline
 {\color{black} \textbf{TOTAL}} &
 {\color{black} \textbf{\$675.30}} &
  &
@@ -194,4 +194,3 @@ with the reality that we a final deadline.
 
 \ucfgfx[scale=0.45]{fig:gantt-chart}{InitialProposal-img005.png}
 {The master gantt chart for the WHCS project}
-
