--- a/toc.tex
+++ b/toc.tex
@@ -50,5 +50,10 @@
 \section{Project Management}
 \import{./}{manage.tex}
 
+% Section 13
+\section{User Manual}
+\label{sec:manual}
+\import{./}{manual.tex}
+
 \appendix
 \import{./}{appendix.tex}
