--- a/whcs.tex
+++ b/whcs.tex
@@ -27,6 +27,8 @@
 \usepackage{fixltx2e}
 % For meeting senior design specifications
 \usepackage{parskip}
+% For wrapping text around figures
+\usepackage{wrapfig}
 % For easy importing of documents
 \usepackage{import}
 % For the checkbox and other math symbols
@@ -200,7 +202,6 @@ pdfauthor={Grant Hernandez},
 % BEGIN COVER PAGE
 \input{title-page.tex}
 
-\todo{Fix footnotes in captions and list of figure hyperlinks}
 % BEGIN TOC,LOF,LOT
 \tableofcontents% \addcontentsline{toc}{section}{Table of Contents}
 %\let\clearpage\relax
