--- a/mfg.tex
+++ b/mfg.tex
@@ -15,8 +15,6 @@ long enough turn around time that we wouldn't be able to test and construct our
 design iteratively. Seeed's cost is very competitive, but we would be losing
 time to save cost.
 
-%\subsubsection{4PCB}
-
 \subsubsection{OSH Park}
 OSH park is quite a popular option due to their low price point for small
 boards. They are known by their distinctive purple boards. WHCS has decided to
@@ -30,7 +28,7 @@ station PCB will be limited by the size of the LCD, but this is only around 2
 by 3 inches.
 
 Overall, OSH park is the best choice for WHCS' budget and technical
-requirements. Its fast shipping time will ensure that we have plenty of time to test our board and make any additional runs if the worst happens.
+requirements. Its fast shipping time will ensure that we have plenty of time to test our board and make any additional runs if the worst happens. We ended up going with OSH park for all of our boards. We had two orders of three control modules, one order of base stations, and only one order of power boards to save on cost.
 
 \subsection{Parts}
 This section will discuss how parts come into the play of the manufacturing of
